--- a/watch-my-cam/src/main/res/values/strings.xml
+++ b/watch-my-cam/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="login">Login</string>
     <string name="retry">Retry</string>
     <string name="devices">Devices</string>
+    <string name="state_">State:</string>
 
 </resources>
